<resources>
    <string name="app_name">VEX</string>
    <string name="sign_in">Вход</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="name">Имя</string>
    <string name="repeat_pass">Повтор пароля</string>
    <string name="login">Логин</string>
    <string name="surname">Фамилия</string>
    <string name="pass">Пароль</string>
    <string name="wrong_login_or_password">Неверный логин или пароль!</string>
    <string name="unreachable_server">Сервер недоступен</string>
    <string name="account_entering">Входим в аккаунт</string>
    <string name="passwords_not_equals">Пароли не совпадают</string>
    <string name="registering">Выполняем регистрацию</string>
    <string name="birthday">Дата рождения</string>
    <string name="edit">Редактировать</string>
    <string name="logout">Выйти из профиля</string>
    <string name="token_deprecated">Токен устарел</string>
    <string name="cancel">Отмена</string>
    <string name="accept_changes">Принять изменения</string>
    <string name="accepting_changes">Принимаем изменения</string>
    <string name="current_pass">Текущий пароль</string>
    <string name="new_pass">Новый пароль</string>
    <string name="repeat_new_pass">Повтор нового пароля</string>
    <string name="wrong_password">Неверный пароль</string>
    <string name="uploading_icon">Загружаем аватар</string>
    <string name="icon_uploaded">Аватар загружен!</string>
    <string name="sending_request">Отправляем запрос</string>
    <string name="request_sent">Заявка в друзья отправлена</string>
    <string name="account_not_found">Аккаунт не найден</string>
    <string name="already_sent_request">Вы уже отправлили заявку этому человеку</string>
    <string name="already_in_friends">Этот человек уже у вас в друзьях</string>
    <string name="cant_send_request_to_yourself">Нельзя отправить запрос самому себе</string>
    <string name="loading">Загрузка</string>
</resources>
